--- a/package.json
+++ b/package.json
@@ -11,11 +11,16 @@
     },
     "devDependencies": {
         "axios": "^0.19",
+        "bootstrap": "^4.1.3",
         "cross-env": "^7.0",
-        "laravel-mix": "^5.0.1",
+        "jquery": "^3.5.1",
+        "laravel-mix": "^5.0.4",
         "lodash": "^4.17.19",
-        "resolve-url-loader": "^3.1.0",
-        "sass": "^1.15.2",
-        "sass-loader": "^8.0.0"
+        "popper.js": "^1.16.1",
+        "resolve-url-loader": "^3.1.1",
+        "sass": "^1.26.10",
+        "sass-loader": "^9.0.3",
+        "vue": "^2.6.11",
+        "vue-template-compiler": "^2.6.11"
     }
 }
