--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
         "laravel/tinker": "^2.5",
         "laravel/ui": "^2.4",
         "laravelcollective/html": "^6.2",
-        "mindscms/entrust": "^2.1"
+        "mindscms/entrust": "^2.1",
+        "cviebrock/eloquent-sluggable": "^7.0"
     },
     "require-dev": {
         "facade/ignition": "^2.0",
